--- a/client/src/components/Themes/Themes.css
+++ b/client/src/components/Themes/Themes.css
@@ -1,11 +1,87 @@
+.themes-page {
+    margin: 0 auto;
+    max-width: 1000px;
+}
 .themes-title {
     margin: 40px 0 0;
 }
 .theme-list {
-    list-style-type: none;
-    padding: 0;
+    padding:0;
+    list-style: none;
+    counter-reset: li;;
 }
 .theme {
+    position: relative;
+    border-left: 4px solid #DDDDDD;
+    padding:16px 20px 16px 28px;
+    margin:12px 0 12px 70px;
+    transition-duration: 0.3s;
+    text-align: left;
+
+    cursor: pointer
+}
+.theme:before {
+    line-height: 32px;
+    position: absolute;
+    top: 10px;
+    left:-80px;
+    width:80px;
+    text-align:center;
+    font-size: 24px;
+    font-weight: bold;
+    color: #DDDDDD;
+    counter-increment: li;
+    content: counter(li);
+    transition-duration: 0.3s;
+    box-sizing: border-box;
+}
+.theme:hover:before {
+    color: #77AEDB;
+}
+.theme:after {
+    position: absolute;
+    top: 26px;
+    left: -40px;
+    width: 60px;
+    height: 60px;
+    border: 8px solid #3399FF;
+    border-radius: 50%;
+    content: '';
+    opacity: 0;
+    transition: transform 0.3s, opacity 0.3s;
+    transform: translateX(-50%) translateY(-50%) scale(0.1);
+    pointer-events: none;
+    box-sizing: border-box;
+}
+.theme:hover:after {
+    opacity: 0.2;
+    transform: translateX(-50%) translateY(-50%) scale(1);
+}
+.theme__author {
+    font-size: 18px;
+}
+.theme__description {
+    font-size: 20px;
+    margin: 10px 0;
+}
+.theme__speakers {
+    list-style: none;
+    display: flex;
+    justify-content: flex-end;
+
+    font-size: 14px;
+}
+.theme__speakers-title {
+    color: rgba(0,0,0,.7);
+}
+.theme__speaker-list {
+    padding: 0;
+}
+.theme__speaker {
     display: inline-block;
-    margin: 0 10px;
+
+    text-decoration: underline;
+}
+.theme__speaker + .theme__speaker {
+    margin-left: 0.5em;
 }
